vNext
----------

- Add requested_claims to access tokens, and allow credentials to be filtered by RC (#1187)
- Sends CP version to ESTS and handle WebCP uri. (#1137)
- Check for eligible for caching when putting command in executing command map
- Expose IAccountCredentialCache for accessing lower-level cache functions.
- Adds unit test to verify .trim() behavior of cache keys.
- Make CacheRecord immutable, insist on NonNull AccountRecord (#1225).
- Bugfix for incorrect error code when cancelling requests (#1144).
- Remove initial about:blank page load when using WebView based auth.
- Log an informative error message when application redirect_uri does not match the broker's expected value (#1155).
- Remove connection close from http request to AUTHORIZATION_CODE_NOT_EXCHANGED_FOR_TOKEN issue on emulators.
- Replace deprecated HttpRequest.sendGet usage with HttpClient.get (#1038)
- Replace deprecated HttpRequest.sendPost usage with HttpClient.post (#1037)

Version 3.0.8
----------
- Hardcode Teams Agent clientID/scope for FoCi call (#1140)
- (Make changes to) persist refresh token in joined flow. (#1130)

Version 3.0.7
----------
- Fix exception casting issue in CommandDispatcher (#1121)

Version 3.0.6
----------
- Expose expiresIn in MSAL Device Code flow callback (#1064)
- Removed constructor param for TokenShareUtility: MSA RefreshToken ingestion always queries WW /consumers.
- Added support for exporting public keys in the following formats:
    * X.509 SubjectPublicKeyInfo
    * JWK (RFC-7517)
- Added support for signing and verifying arbitrary String data with select RSA algorithms.
- Added support for multiple software/hardware backed RSA keys using AsymmetricKey, AsymmetricKeyFactory.
- Bugfix: Added a workaround for keypair generation on API < 23 devices using locales with non-Gregorian calendars. (#1075)
- Reordered Credential writing into the cache such that the old RT is cleaned up *after* the new RT is written.